--- a/deployment/templates/upload_file.html
+++ b/deployment/templates/upload_file.html
@@ -9,5 +9,14 @@
 	  <input type="file" id="image" name="image" accept="image/*">
 	  <input type="submit" value="Submit">
 	</form>
+	<br>
+	<p>Please upload the images that contain the roads having similar width with the roads in these example images:
+	<br>
+	<a href="https://drive.google.com/file/d/1moodMBuTrBfHgkzCQ9azEP7js18cXGN_/view?usp=sharing">Image 1</a>
+	<a href="https://drive.google.com/file/d/1J_l_8L2i1W5u5zF3w8bl14w5wzLGlzi6/view?usp=sharing">Image 2</a>
+	<a href="https://drive.google.com/file/d/1unWKVGYjppUExo8Hpc8YLxLrwjo0fbKz/view?usp=sharing">Image 3</a>
+	<br>
+	Best way to find the suitable images is cropping the images from Google Earth because they are raw satellite images without any location tag. If you cannot find any, you can directly use the images on the link above. We can assure you that these images are not included in the dataset that is used to train this model.
+	</p>
 </div>
 {% endblock %}
